--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -110,6 +110,18 @@
                     <label for="eur">Eur</label>
                     <input type="number" id="eur">
                 </div>
+                <div class="cny">
+                    <label for="cny">Cny</label>
+                    <input type="number" id="cny">
+                </div>
+                <div class="jpy">
+                    <label for="jpy">Jpy</label>
+                    <input type="number" id="jpy">
+                </div>
+                <div class="czk">
+                    <label for="krw">Czk</label>
+                    <input type="number" id="czk">
+                </div>
             </div>
         </div>
     </div>
